[tool.poetry]
name = "SuccessLG"
version = "0.1.0"
description = "Web app for SuccessLG"
authors = ["Fisayo Ajayi <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.1.1"
gunicorn = "21.2.0"
pandas = "2.2.2"
numpy = "2.0.2"
scikit-learn = "1.6.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
